--- a/verification-service/src/main/webapp/password-reset.html
+++ b/verification-service/src/main/webapp/password-reset.html
@@ -43,7 +43,7 @@
 					function (response){
 						document.getElementById("password_one").value = "";
 						document.getElementById("password_two").value = ""; 
-						if(response["result"] === "SUCCESS"){
+						if(response["operationResult"] === "SUCCESS"){
 							$("#not-successful-result").attr("style","display:none !important;");
 							$("#successful-result").attr("style", "display:block !important;");
 						} else {
